# Open-Forest-Sentinel

./: .env.example  .gitignore  DEPLOYMENT.md  INSTANCE_DEPLOYMENT.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: agent-bead.yml
.github/workflows/: scheduled-run.yml
alembic/versions/: 0002_create_observation_table.py  0002_observation.py  0003_methodology_version.py  0004_index_raster.py  0004_quality_mask.py  0005_change_raster.py  0005_index_raster.py  0006_disturbance_candidate.py
config/: instance.env
docs/: architecture.md  beads.md  config-inventory.md  scaling.md  work-plan.md
scripts/: bootstrap_local.sh  make_aoi.py  provision_vm.sh  run_pipeline.sh  setup_gcp.sh  setup_wif.sh  vm_setup.sh
scripts/systemd/: forest-sentinel-dashboard.service  forest-sentinel-pipeline.service  forest-sentinel-pipeline.timer
src/forest_sentinel/: __init__.py  aoi.py  candidates.py  change.py  cli.py  confidence.py  earthengine.py  events.py  hls.py  indices.py  methodology.py  models.py  pipeline.py  qa.py  radar.py  settings.py  storage.py
src/forest_sentinel/dashboard/: app.py
src/forest_sentinel/dashboard/static/: index.html
tests/: fakes.py  test_candidates.py  test_change.py  test_cli.py  test_confidence.py  test_dashboard.py  test_earthengine.py  test_events.py  test_hls.py  test_indices.py  test_localextract.py  test_methodology.py  test_migrations.py  test_observation.py  test_pipeline.py  test_qa.py  test_settings.py  test_storage.py  test_version.py
